--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/storage": "^16.5.0",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "dayjs": "^1.11.7",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-image-picker": "^4.10.3",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-super-grid": "^5.0.0",
     "react-native-vector-icons": "^9.2.0",
     "tailwindcss": "^3.2.4"
   },
