--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-native": "0.70.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^4.10.3",
+    "react-native-maps": "^1.3.2",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-super-grid": "^5.0.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "tailwindcss": "^3.2.4"
   },
